Make open content stay white. This implicitly avoids the flickering problem when the mouse goes over bootstrap tooltips.

--- a/oneflow/core/static/sass/_responsive.scss
+++ b/oneflow/core/static/sass/_responsive.scss
@@ -193,12 +193,6 @@
                 */
                 margin-left: -10px;
                 margin-right: -10px;
-
-                /*
-                    Be sure we don't see any disgraceful grey borders coming
-                    from the .application container.
-                */
-                background-color: #fff;
             }
 
             .article-content {
